# quadraticvoting

./: .gitignore  .pre-commit-config.yaml.saved  Dockerfile  LICENSE  Makefile  NFT.hs  README.md  build-function.sh  build.sh  cabal-build-function.sh  cabal.project  ci.nix  default.nix  flake.nix  hie.yaml  quadraticVoting.cabal  qvf-generate-scripts-dynamic.yaml  qvf-generate-scripts-static.yaml  qvf-generate-scripts-template.yaml  qvf-generate-scripts.cabal  qvf-generate-scripts.yaml  sam-build.sh  samconfig.toml  shell.nix
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: haskell.yml  lambda.yml  pipeline.yaml  qvf-build.yml  qvf-static-build.yml  test.yml
Docker/: CabalBuild.Dockerfile  GitActionCabalBuild.Dockerfile  NixBuild.Dockerfile
app/: CLI.hs
build-tools/: build-function.sh  build-layer.sh
doc/: README.md
doc/Design/: OnChain.md  UseCases.md
lambda-extensions/cnode-tunnel/: cnode-tunnel.sh
nix/: binary-release.nix  custom-config.nix  haskell.nix  pkgs.nix  project-packages-exes.nix
nix/pkgs/: default.nix
nix/pkgs/haskell/: default.nix  extra.nix  haskell.nix  sha256map.nix
quadraticVoting/: OnChain.hs  README.md  Utils.hs  hie.yaml  quadraticVoting.cabal
quadraticVoting/Minter/: Registration.hs
quadraticVoting/src/: Datum.hs  DonationInfo.hs  OnChain.hs  QVF.hs  QVFFundingSketch.hs.txt  RegistrationInfo.hs  Token.hs  Utils.hs
quadraticVoting/src/Agent/: Donation.hs
quadraticVoting/src/CLI/: Help.hs  OffChainFileNames.hs  RegisteredProject.hs  Tx.hs  Utils.hs
quadraticVoting/src/Data/: Datum.hs  DonationInfo.hs  ListPlacement.hs  Redeemer.hs  Redeemers.hs  RegistrationInfo.hs  ScriptUTxO.hs
quadraticVoting/src/Data/Redeemer/: Donation.hs  Governance.hs  QVF.hs  Registration.hs
quadraticVoting/src/Minter/: Donation.hs  Governance.hs  NFT.hs  Registration.hs
qvf-cli/: CLI.hs  hie.yaml  qvf-cli.cabal
qvf-cli/app/: CLI.hs
qvf-generate-scripts/: LICENSE.md  Makefile  build.sh  hie.yaml  qvf-generate-scripts.cabal  template.yaml
qvf-generate-scripts/app/: Main.hs
qvf-generate-scripts/events/: qvf-gen-scripts.json
qvf-generate-scripts/src/: Lib.hs
qvf-genesis/: qvf-genesis.cabal
qvf-genesis/app/: Main.hs
qvf-genesis/src/: Lib.hs
scripts/: README.md  accumulate-donations.sh  accumulate-prize-weights.sh  blockfrost.sh  check-if-utxo-present.sh  cli-automate.sh  collateral-key-holder-sign-transaction.sh  collect-key-holder-fee.sh  conclude-funding-round.sh  consume-bounty-credit.sh  contribute.sh  data_hashs.txt  distribute-prize.sh  donate-to-project.sh  donate.sh  donation.sh  eliminate-one-project.sh  emulate-outcome.sh  env.sh  fold-accumulate-eliminate-distribute.sh  fold-donations.sh  gen-init-datum.sh  gen-payment-address.sh  generate-pkh-from-vkey.sh  generate-script-address-from-file.sh  generate-wallet.sh  get-bounty-credit-amount.sh  get-current-funding-round.sh  get-current-state.sh  get-custodial-wallet.sh  get-datum-value.sh  get-match-pool-amount.sh  get-network-status.sh  get-utxo-at-script.sh  get-utxo.sh  get-utxos.sh  hash-init-datum.sh  initiate_qvf.sh  initiation.sh  local-env.sh  (+15 more)
src/: Genesis.hs  NFT.hs  OnChain.hs  ProjectRegistrant.hs  QVF.hs  QVFFund-sketch.hs  QuadraticVoting.hs  QuadraticVotingV2.hs  QuadraticVotingV3.hs  QuadraticVotingv4.hs  README.md  Token.hs  Utils.hs  emulator.hs  flake.nix
src/Minter/: Donation.hs  NFT.hs  Registration.hs
testnet/: 1.addr  1.pkh  1.skey  1.vkey  10.addr  10.pkh  10.skey  10.vkey  11.addr  11.pkh  11.skey  11.vkey  12.addr  12.pkh  12.skey  12.vkey  13.addr  13.pkh  13.skey  13.vkey  14.addr  14.pkh  14.skey  14.vkey  15.addr  15.pkh  15.skey  15.vkey  16.addr  16.pkh  16.skey  16.vkey  17.addr  17.pkh  17.skey  17.vkey  18.addr  18.pkh  18.skey  18.vkey  (+108 more)
