Cabal-Version:      3.0

Name:                quadraticVoting
Version:             0.1.0.0
Author:              Andy Sizer
                   , Tasos Valtinos
                   , Keyan M.
Maintainer:          andysizer@snapbrillia.com
                   , tasosvaltinos@snapbrillia.com
                   , keyanmaskoot@snapbrillia.com
Build-Type:          Simple
Copyright:           © 2022 Snapbrillia
License:             Apache-2.0
License-files:       LICENSE

library
  hs-source-dirs:      src
  exposed-modules:     OnChain
                     , Token
  build-depends:       aeson
                     , text
                     , base >= 4.9 && < 5
                     , plutus-ledger
                     , plutus-contract
                     , plutus-ledger-api
                     , plutus-tx
                     , plutus-tx-plugin
                     , bytestring
                     , cardano-api
                     , containers
                     , data-default
                     , plutus-ledger-constraints
                     , serialise
  default-language:    Haskell2010
  ghc-options:         -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise -fplugin-opt PlutusTx.Plugin:defer-errors

executable qvf-cli
  main-is:             CLI.hs
  hs-source-dirs:      app
  build-depends:       cardano-api
                     , serialise
                     , aeson
                     , bytestring
                     , base >= 4.9 && < 5
                     , text
                     , plutus-tx
                     , plutus-ledger
                     , quadraticVoting
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Weverything -O2
