Cabal-Version:      3.6

Name:                quadraticVoting
Version:             0.1.0.0
Author:              Andy Sizer
                   , Tasos Valtinos
                   , Keyan M.
Maintainer:          andysizer@snapbrillia.com
                   , tasosvaltinos@snapbrillia.com
                   , keyanmaskoot@snapbrillia.com
Build-Type:          Simple
Copyright:           © 2022 Snapbrillia
License:             Apache-2.0
License-files:       LICENSE

library
  hs-source-dirs:      src
  exposed-modules:     OnChain
                     , Token
                     , Utils
  build-depends:       base >= 4.9 && < 5
                     , bytestring
                     , cardano-api
                     , data-default
                     , playground-common
                     , plutonomy
                     , plutus-contract
                     , plutus-ledger
                     , plutus-ledger-api
                     , plutus-ledger-constraints
                     , plutus-tx-plugin
                     , plutus-tx
  default-language:    Haskell2010
  ghc-options:         -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise

executable qvf-cli
  main-is:             CLI.hs
  hs-source-dirs:      app
  build-depends:       aeson
                     , base >= 4.9 && < 5
                     , bytestring
                     , cardano-api
                     , cardano-binary
                     , containers
                     , plutus-ledger
                     , plutus-ledger-api
                     , plutus-tx
                     , quadraticVoting
                     , serialise
                     , text
                     , time
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Weverything -O2
