Cabal-Version:      3.6

Name:                quadraticVoting
Version:             0.2.0.0
Author:              Andy Sizer
                   , Tasos Valtinos
                   , Keyan M.
Maintainer:          andysizer@snapbrillia.com
                   , tasosvaltinos@snapbrillia.com
                   , keyanmaskoot@snapbrillia.com
Build-Type:          Simple
Copyright:           © 2022 Snapbrillia
License:             Apache-2.0
License-files:       LICENSE

library
  hs-source-dirs:      src
  other-modules:
                       Paths_quadraticVoting

  default-language:    Haskell2010

  exposed-modules:     QVF
                     , Datum
                     , Minter.NFT
                     , Minter.Registration
                     , RegistrationInfo
                     , Utils

  build-depends:       base >= 4.9 && < 5
                     , aeson
                     , bytestring
                     , cardano-api
                     , data-default
                     , plutonomy
                     , plutus-ledger
                     , plutus-ledger-api
                     , plutus-script-utils
                     , plutus-tx-plugin
                     , plutus-tx

  ghc-options:         -Wall 
                       -fobject-code
                       -fno-ignore-interface-pragmas
                       -fno-omit-interface-pragmas
                       -fno-strictness
                       -fno-spec-constr
                       -fno-specialise
                       -fplugin-opt PlutusTx.Plugin:defer-errors
