Cabal-Version:      3.6

Name:                quadraticVoting
Version:             0.2.2.0
Author:              Andy Sizer
                   , Curtis Myers
                   , Keyan M.
                   , Paul Ritterbush
                   , Shan Yu Zhang
                   , Tasos Valtinos
Maintainer:          andysizer@snapbrillia.com
                   , https://github.com/blockchainrelativity
                   , keyanmaskoot@snapbrillia.com
                   , https://github.com/ritterbush
                   , szhang12341@gmail.com
                   , tasosvaltinos@snapbrillia.com
Build-Type:          Simple
Copyright:           © 2022 Snapbrillia
License-files:       LICENSE.md

library
  hs-source-dirs:      src
  other-modules:
                       Paths_quadraticVoting

  default-language:    Haskell2010

  exposed-modules:     CLI.Help
                     , CLI.OffChainFileNames
                     , CLI.RegisteredProject
                     , CLI.Utils
                     , CLI.Tx
                     , QVF
                     , Data.Datum
                     , Data.DonationInfo
                     , Data.Redeemer
                     , Minter.Donation
                     , Minter.Governance
                     , Minter.Registration
                     , Utils

  build-depends:       base >= 4.9 && < 5
                     , aeson
                     , bytestring
                     , cardano-api
                     , cardano-crypto-class
                     , cardano-ledger-core
                     , data-default
                     , plutonomy
                     , plutus-ledger
                     , plutus-ledger-api
                     , plutus-script-utils
                     , plutus-tx-plugin
                     , plutus-tx
                     , serialise
                     , text
                     , time

  ghc-options:         -Wall 
                       -fobject-code
                       -fno-ignore-interface-pragmas
                       -fno-omit-interface-pragmas
                       -fno-strictness
                       -fno-spec-constr
                       -fno-specialise
                       -fplugin-opt PlutusTx.Plugin:defer-errors
