Cabal-Version:      3.0

Name:                qvf-cli
Version:             0.1.0.0
Author:              Andy Sizer
                   , Tasos Valtinos
                   , Keyan M.
Maintainer:          andysizer@snapbrillia.com
                   , tasosvaltinos@snapbrillia.com
                   , keyanmaskoot@snapbrillia.com
Build-Type:          Simple
Copyright:           © 2022 Snapbrillia
License:             Apache-2.0
License-files:       LICENSE

executable qvf-cli
  hs-source-dirs:      app
  main-is:             CLI.hs
  default-language:    Haskell2010

  build-depends:       base >= 4.9 && < 5
                     , text >= 1.2
                     , cardano-api
                     , serialise
                     , aeson
                     , bytestring
                     , cardano-api
                     , plutus-ledger
                     , plutus-ledger-api
                     , plutus-tx
                     , plutus-ledger
                     , plutus-ledger-api
                     , quadraticVoting
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -O2
