Cabal-Version:      3.6

Name:                qvf-cli
Version:             0.2.0.0
Author:              Andy Sizer
                   , Tasos Valtinos
                   , Keyan M.
Maintainer:          andysizer@snapbrillia.com
                   , tasosvaltinos@snapbrillia.com
                   , keyanmaskoot@snapbrillia.com
Build-Type:          Simple
Copyright:           © 2022 Snapbrillia
License-files:       LICENSE.md

executable qvf-cli
  hs-source-dirs:      app
  main-is:             CLI.hs
  default-language:    Haskell2010

  build-depends:       aeson
                     , base >= 4.9 && < 5
                     , bytestring
                     , cardano-api
                     , cardano-binary
                     , containers
                     , plutus-ledger
                     , plutus-ledger-api
                     , plutus-tx
                     , quadraticVoting
                     , serialise
                     , text
                     , time

  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -O2
