Cabal-Version:      3.6

Name:                qvf-cli
Version:             0.2.5.1
Author:              Andy Sizer
                   , Curtis Myers
                   , Keyan M.
                   , Paul Ritterbush
                   , Shan Yu Zhang
                   , Tasos Valtinos
Maintainer:          andysizer@snapbrillia.com
                   , https://github.com/blockchainrelativity
                   , keyanmaskoot@snapbrillia.com
                   , https://github.com/ritterbush
                   , szhang12341@gmail.com
                   , tasosvaltinos@snapbrillia.com
Build-Type:          Simple
Copyright:           © 2022 Snapbrillia
License:             Apache-2.0
License-files:       LICENSE

executable qvf-cli
  hs-source-dirs:      app
  main-is:             CLI.hs
  default-language:    Haskell2010

  build-depends:       aeson
                     , base >= 4.9 && < 5
                     , bytestring
                     , cardano-api
                     , cardano-binary
                     , containers
                     , plutus-ledger
                     , plutus-ledger-api
                     , plutus-tx
                     , quadraticVoting
                     , serialise
                     , text
                     , time

  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -O2
