Cabal-Version:      3.6

Name:                qvf-genesis
Version:             0.1.0.0
Author:              Andy Sizer
                   , Tasos Valtinos
                   , Keyan M.
Maintainer:          andysizer@snapbrillia.com
                   , tasosvaltinos@snapbrillia.com
                   , keyanmaskoot@snapbrillia.com
Build-Type:          Simple
Copyright:           © 2022 Snapbrillia
License:             Apache-2.0
License-files:       LICENSE

library
  exposed-modules:
      Lib

  other-modules:
      Paths_qvf_genesis

  hs-source-dirs:
      src

  default-extensions:
      RecordWildCards
      OverloadedLists
      OverloadedStrings
      DeriveGeneric

  build-depends:
      aeson
    , aws-lambda-haskell-runtime
    , base >= 4.9 && <5

  default-language: Haskell2010

executable qvf-genesis
  main-is: Main.hs

  other-modules:
      Paths_qvf_genesis

  hs-source-dirs:
      app

  default-extensions:
      RecordWildCards
      OverloadedLists
      OverloadedStrings
      DeriveGeneric

  ghc-options: -threaded -rtsopts -O2 -with-rtsopts=-N

  build-depends:
      aeson
    , aws-lambda-haskell-runtime 
    , base >= 4.9 && <5
    , qvf-genesis
    
  default-language: Haskell2010
